--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -159,7 +159,7 @@ h2 {
 
 
 /* Make sure boxes go in a column on small screens */
-@media ($on-palm) {
+@media (max-width: $on-palm) {
   .visit-page-container {
       flex-direction: column;
       align-items: center;
